# BlockingPy

./: .coveragerc  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  THIRD_PARTY  example.py  notatki.txt  pyproject.toml
.github/workflows/: coverage.yml  lint_and_types.yml  publish.yml  run_tests.yml
benchmark/: benchmark.ipynb  data_sim_1000.csv  data_sim_10000.csv  wykaz_krajow_obywatelstwa.csv
blockingpy/: __init__.py  annoy_blocker.py  base.py  blocker.py  blocking_result.py  controls.py  data_handler.py  faiss_blocker.py  gpu_faiss_blocker.py  helper_functions.py  hnsw_blocker.py  mlpack_blocker.py  nnd_blocker.py  voyager_blocker.py
blockingpy/datasets/: __init__.py  base.py
blockingpy/datasets/data/: rldata10000.csv
blockingpy/text_encoders/: base.py  embedding_encoder.py  shingle_encoder.py  text_transformer.py
docs/: blocklib_comp.md  changelog.md  conf.py  index.md  requirements.txt
docs/_build/doctrees/: environment.pickle
docs/_build/doctrees/api/: blocker.doctree  blocking_result.doctree
docs/_build/doctrees/user_guide/: basic_operations.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  api.html  blockingpy_example.html  changelog.html  genindex.html  getting_started.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  user_guide.html
docs/_build/html/.doctrees/: api.doctree  blockingpy_example.doctree  changelog.doctree  environment.pickle  getting_started.doctree  index.doctree  installation.doctree  quickstart.doctree  user_guide.doctree
docs/_build/html/.doctrees/api/: blocker.doctree  blocking_result.doctree
docs/_build/html/.doctrees/examples/: blockingpy_example.doctree  deduplication.doctree  evaluation.doctree  record_linkage.doctree
docs/_build/html/.doctrees/getting_started/: getting_started.doctree  quickstart.doctree
docs/_build/html/.doctrees/user_guide/: additional_informations.doctree  algorithm_overview.doctree  index.doctree  user_guide.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/blockingpy/: blocker.html  blocking_result.html
docs/_build/html/_sources/: api.md.txt  blockingpy_example.ipynb.txt  changelog.md.txt  index.md.txt  quickstart.md.txt  user_guide.md.txt
docs/_build/html/_sources/examples/: deduplication.md.txt  evaluation.md.txt  index.md.txt  record_linkage.md.txt
docs/_build/html/_sources/getting_started/: getting_started.md.txt
docs/_build/html/_sources/user_guide/: additional_informations.md.txt  algorithm_overview.md.txt  index.md.txt
docs/_build/html/api/: blocker.html  blocking_result.html  index.html
docs/_build/html/examples/: blockingpy_example.html  deduplication.html  evaluation.html  index.html  record_linkage.html
docs/_build/html/getting_started/: getting_started.html  index.html  installation.html  quickstart.html
docs/_build/html/user_guide/: additional_informations.html  algorithm_overview.html  basic_operations.html  configuration_tuning.html  core_concepts.html  evaluation_metrics.html  index.html  input_data_handling.html  user_guide.html
docs/_build/jupyter_execute/examples/: blockingpy_example.ipynb
docs/examples/: deduplication.md  deduplication_2.md  embedding_dedup.md  index.md  record_linkage.md  recordlinkage_integration.md  splink_integration.md
docs/getting_started/: quickstart.md
docs/html/: blocklib_comp.html  changelog.html  genindex.html  gpu.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/.doctrees/: blocklib_comp.doctree  changelog.doctree  environment.pickle  gpu.doctree  index.doctree
docs/html/.doctrees/api/: backends.doctree  blocker.doctree  blocking_result.doctree  configuration.doctree  data_structures.doctree  datasets.doctree  encoders.doctree  index.doctree
docs/html/.doctrees/examples/: deduplication.doctree  deduplication_2.doctree  embedding_dedup.doctree  gpu_example_dedup.doctree  index.doctree  record_linkage.doctree  recordlinkage_integration.doctree  splink_integration.doctree
docs/html/.doctrees/getting_started/: index.doctree  installation.doctree  quickstart.doctree
docs/html/.doctrees/user_guide/: basic_operations.doctree  configuration_tuning.doctree  core_concepts.doctree  evaluation_metrics.doctree  index.doctree  input_data_handling.doctree
docs/html/_modules/: index.html
docs/html/_modules/blockingpy/: annoy_blocker.html  blocker.html  blocking_result.html  controls.html  data_handler.html  faiss_blocker.html  gpu_faiss_blocker.html  hnsw_blocker.html  mlpack_blocker.html  nnd_blocker.html  voyager_blocker.html
docs/html/_modules/blockingpy/datasets/: base.html
docs/html/_modules/blockingpy/text_encoders/: embedding_encoder.html  shingle_encoder.html  text_transformer.html
docs/html/_sources/: blocklib_comp.md.txt  changelog.md.txt  gpu.md.txt  index.md.txt
docs/html/_sources/examples/: deduplication.md.txt
docs/html/_sources/user_guide/: basic_operations.md.txt
docs/html/api/: backends.html  blocker.html  blocking_result.html  configuration.html  data_structures.html  datasets.html  encoders.html  index.html
docs/html/examples/: deduplication.html  deduplication_2.html  embedding_dedup.html  gpu_example_dedup.html  index.html  record_linkage.html  recordlinkage_integration.html  splink_integration.html
docs/html/getting_started/: index.html  installation.html  quickstart.html
docs/html/user_guide/: basic_operations.html  configuration_tuning.html  core_concepts.html  evaluation_metrics.html  index.html  input_data_handling.html
docs/user_guide/: basic_operations.md  configuration_tuning.md  evaluation_metrics.md
src/blockingpy/: annoy_blocker.py  hnsw_blocker.py  mlpack_blocker.py  nnd_blocker.py
tests/: conftest.py  test_annoy_blocker.py  test_blocking.py  test_blocking_result.py  test_controls.py  test_datasets.py  test_faiss_blocker.py  test_gpu_faiss.py  test_hnsw_blocker.py  test_mlpack_blocker.py  test_nnd_blocker.py  test_text_transform.py  test_voyager_blocker.py
(+1 files in other folders)
