[tool.poetry]
name = "blockingpy"
version = "0.1.0"
description = "Python port of R's blocking package  for blocking records for record linkage and data deduplication based on ANN algorithms."
authors = ["Tymoteusz Strojny <tymek.strojny@gmail.com>"]
readme = "README.md"
packages = [{include = "blockingpy"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21"
annoy = "^1.17.3"
hnswlib = "^0.8.0"
scipy = ">=1.5.0"
pynndescent = "^0.5.13"
scikit-learn = "^1.5.2"
networkx = "^3.1"
nltk = "^3.9.1"
voyager = "^2.0.9"
faiss-cpu = "^1.9.0"
mlpack = ">=4.4.0,<5.0.0"
pandas = ">=2.2.0,<3.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
black = "^24.10.0"
mypy = "^1.13.0"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I", 
    "B",
    "C90",  
    "D", 
    "UP", 
    "YTT", 
    "ANN",  
    "S",   
    "A", 
    "LOG",  
    "PYI", 
    "TC",   
    "PD",   
    "PL",   
    "NPY",  
    "DOC",  
    "RUF",  
]

ignore = ["D211", "D212", "D205", "RUF012", "PLR0917", "PLR0913", "ANN401", "PLR0912", "C901", "PLR0915"]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",  
    "ANN202",  
    "S101",
    "DOC201",
    "D401"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

