[tool.poetry]
name = "blockingpy"
version = "0.2.2"
description = "Dev-only toml"
authors = ["Tymoteusz Strojny <tymek.strojny@gmail.com>", "Maciej Beręsewicz <maciej.beresewicz@ue.poznan.pl>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ncn-foreigners/BlockingPy"
documentation = "https://blockingpy.readthedocs.io/en/latest/"
keywords = ["record-linkage", "deduplication", "ANN", "blocking", "data-matching"]
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
blockingpy-core = { path = "packages/blockingpy-core", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "requires_faiss_gpu: needs faiss-gpu and a CUDA device",
  "requires_mlpack: needs mlpack",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I", 
    "B",    
    "C90",  
    "D", 
    "UP", 
    "YTT", 
    "ANN",  
    "S",   
    "A", 
    "LOG",  
    "PYI", 
    "TC",   
    "PD",   
    "PL",   
    "NPY",  
    "DOC",  
    "RUF",
    "PLR2004",  
]

ignore = ["D211", "D212", "D205", "RUF012", "PLR0917", "PLR0913", "ANN401", "PLR0912", "C901", "PLR0915"]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",  
    "ANN202",  
    "S101",
    "DOC201",
    "D401"
]

